fixed spacing img size and update new design

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-body {
-  font-family: 'Poppins', sans-serif;
-}
-
 // fonts family
 .font-title--lg,
 .font-title--md,
@@ -15,7 +11,6 @@ body {
 .font-title--lg,
 .font-title--md,
 .font-title--xs {
-  font-family: 'Poppins', sans-serif;
   font-weight: 700;
   color: #202029;
 }
@@ -46,7 +41,7 @@ body {
   &--sm {
     font-size: 32px;
     line-height: 40px;
-    font-family: 'Poppins', sans-serif;
+
     font-weight: 600;
     @media (max-width: 767px) {
       font-size: 24px;
@@ -57,7 +52,7 @@ body {
     font-size: 24px;
     line-height: 36px;
     color: #42414b;
-    font-family: 'Poppins', sans-serif;
+
     font-weight: 500;
 
     @media (max-width: 767px) {
@@ -68,7 +63,7 @@ body {
 
   &--card {
     font-size: 18px;
-    line-height: 27pxpx;
+    line-height: 27px;
     font-weight: 500;
     color: #202029;
     @media (max-width: 767px) {
@@ -84,7 +79,7 @@ body {
     font-size: 16px;
     line-height: 24px;
     color: #8f8fa3;
-    font-family: 'Poppins', sans-serif;
+
     font-weight: 500;
     @media (max-width: 767px) {
       font-size: 14px;
